# data-encrypter

./: .gitignore  README.md  fileencrypter.sln
.github/workflows/: c-cpp.yml
dataencrypter/: Common.h  Main.cpp  a.out  temp.txt
dataencrypter/demo/: .crypt-validation.txt  a.txt  a.txt.enc  a.txt.enc.decrypted  b.txt
dataencrypter/headers/: Crypt.h  Crypt.hpp  Utils.h  Utilscp.hpp
dataencrypter/src/: CMakeLists.txt  Crypt.cpp  Main.cpp  QuickBuild.c  Utils.c  Utils.cpp  a.out  main  main.out  makefile  quickbuild.out  secrets.txt.enc  testbuild
dataencrypter/src/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  dataencrypter
fileencrypter/: App.xaml.cs  EncryptionHandler.cs
fileenrypter/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  fileencrypter.csproj
